agrega secreto pull

--- a/deploy/kube/bookinfo.yaml
+++ b/deploy/kube/bookinfo.yaml
@@ -91,7 +91,8 @@ spec:
         app: ratings
         version: v1
     spec:
-      imagePullSecret: registry
+      imagePullSecret:
+      - name: registry
       containers:
       - name: ratings
         image: cursocgn.azurecr.io/ratings-mai:v1
@@ -135,7 +136,8 @@ spec:
         app: reviews
         version: v1
     spec:
-      imagePullSecret: registry
+       imagePullSecret:
+      - name: registry
       containers:
       - name: reviews
         image: cursocgn.azurecr.io/reviews-mai:v1
@@ -180,7 +182,8 @@ spec:
         app: productpage
         version: v1
     spec:
-      imagePullSecret: registry
+      imagePullSecret:
+      - name: registry
       containers:
       - name: productpage
         image: cursocgn.azurecr.io/productpage-mai:v1
